--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -19,14 +19,51 @@
   height: calc(100vh - 71px);
   padding-bottom: 50px;
 }
+.create_element_panel_line{
+  position: absolute;
+  width: 20px;
+  height: 1px;
+  background: #eee;
+}
+.add_icon{
+  position: absolute;
+  cursor: pointer;
+}
+.create_element_panel{
+  background: white;
+  position: absolute;
+  width: 100px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  .input_name{
+    padding-bottom: 10px;
+  }
+  .item{
+    font-size: $FONT_SIZE_SMALL;
+    text-align: left;
+    padding: 5px;
+    cursor: pointer;
+  }
+  .item:hover{
+    background: #eee;
+  }
+  .selected_item{
+    background: #8d8d8d;
+  }
+  .selected_item:hover{
+    background: #8d8d8d;
+  }
+}
 
 .business_layout {
+  position: relative;
   width: 100%;
   height: 100%;
 }
 .technical_layout{
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .layout_svg {
   cursor: move;
@@ -254,7 +291,7 @@
   cursor: pointer;
   fill: #fff;
   stroke: #000;
-  transition: all 0.3s;
+  transition: fill 0.3s;
 }
 .new_process_icon:hover{
   fill: #21d0e226;
@@ -265,7 +302,7 @@
     cursor: pointer;
     fill: #fff;
     stroke: #000;
-    transition: all 0.3s;
+    transition: fill 0.3s;
   }
   polygon:hover{
     fill: #21d0e226;
