--- a/src/frontend/app/themes/default/content/update_assistant/main.scss
+++ b/src/frontend/app/themes/default/content/update_assistant/main.scss
@@ -31,6 +31,11 @@
   }
 }
 
+.system_overview{
+  margin-top: 20px;
+  @extend .finish_update;
+}
+
 .table{
   margin-bottom: 0 !important;
   margin-top: 20px;
