[Modified] OC-324 #comment merging with Form #time 6h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -17,6 +17,13 @@
 
 .connection_editor{
   height: calc(100vh - 71px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  //height: 100%;
+  background: white;
+  z-index: 1;
   padding-bottom: 50px;
 }
 .create_element_panel_line{
