[Improved] OC-324 #comment minor improvements and optimization #time 4h

--- a/src/frontend/app/themes/default/general/view_component.scss
+++ b/src/frontend/app/themes/default/general/view_component.scss
@@ -24,6 +24,12 @@
   overflow: initial !important;
 }
 
+.content_with_external_component{
+  @extend .content;
+  min-height: initial !important;
+  position: initial !important;
+}
+
 .title{
   font-family: $FONT_FAMILY;
   margin-bottom: 5px;
