[Modified] OC-324 #comment representation of the whole template with connector panels #time 16h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -315,3 +315,13 @@
     fill: #21d0e226;
   }
 }
+
+.connector_item_panel{
+  fill: none;
+  stroke: #eee;
+  stroke-width: 2;
+}
+.connector_item_text{
+  font-weight: bold;
+  font-size: $FONT_SIZE_MEDIUM;
+}
