--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -82,13 +82,27 @@
   }
 }
 
-.navigation {
+.external_validation_message{
+  @extend .validation_message;
+  bottom: 60px;
+}
+
+.navigation{
   font-family: $FONT_FAMILY;
   height: 26px;
   position: absolute;
   bottom: 30px;
   margin-left: -15px;
   width: 100%;
+}
+.external_navigation{
+  @extend .navigation;
+  border-top: 1px solid #eee;
+  bottom: 50px;
+  z-index: 1;
+  height: 50px;
+  background: white;
+  padding-top: 13px;
 }
 
 .navigation_buttons{
@@ -134,6 +148,7 @@
 }
 
 .navigation_action_icon{
+  margin-top: -7px;
   margin-right: 15px;
   float: right;
   cursor: pointer;
