[Modified] OC-324 #comment added delete for operator and references in body #time 10h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -93,7 +93,6 @@ $CURRENT_ITEM_FILL: #f4f4f4;
 }
 .operator{
   text{
-    pointer-events: none;
     font-size: $FONT_SIZE_SMALL;
   }
 }
@@ -150,11 +149,17 @@ $CURRENT_ITEM_FILL: #f4f4f4;
   pointer-events: none;
   font-size: $FONT_SIZE_MEDIUM;
 }
-.process_close{
+.delete{
   font-family: $FONT_FAMILY;
   font-size: 16px;
-  fill: $ERROR_COLOR;
+  fill: $REMOVE_ICON_COLOR;
   cursor: pointer;
+}
+.process_delete{
+  @extend .delete;
+}
+.operator_delete{
+  @extend .delete;
 }
 .if_operator{
   text{
