--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -366,8 +366,9 @@ $CURRENT_ITEM_FILL: #f4f4f4;
 .description{
   font-size: 14px;
   text-align: left;
-  .name{
+  .value{
     font-family: $FONT_FAMILY;
+    padding-left: 3px;
   }
   .label_input{
     padding: 0;
@@ -401,20 +402,37 @@ $CURRENT_ITEM_FILL: #f4f4f4;
   .entry_padding{
     padding-left: 15px !important;
   }
-  .more_details{
-    >span {
+  .more_details {
       color: #c0c0c5;
       cursor: pointer;
-      padding: 40px 3px;
-    }
-    >span:hover{
-      color: #444b4c;
       padding: 0 3px;
-      box-shadow: #9f9f9f 0 1px 3px 0;
     }
+  .more_details:hover{
+    color: #444b4c;
+    padding: 0 3px;
+    box-shadow: #9f9f9f 0 1px 3px 0;
   }
+
   .edit_icon{
-    margin-left: 5px;
+    position: absolute;
+    right: 0;
+    background: white;
+    width: unset !important;
+    height: unset !important;
+  }
+  .apply_icon{
+    position: absolute;
+    right: 15px;
+    background: white;
+    width: unset !important;
+    height: unset !important;
+  }
+  .cancel_icon{
+    position: absolute;
+    right: 0;
+    background: white;
+    width: unset !important;
+    height: unset !important;
   }
 }
 .header_head{
@@ -437,6 +455,9 @@ $CURRENT_ITEM_FILL: #f4f4f4;
   tr{
     height: 50px;
   }
+}
+.condition_dialog{
+  min-width: 750px;
 }
 .url_dialog{
   min-width: 750px;
