--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -796,6 +796,10 @@
   width: 1px;
 }
 
+.param_input_dropdown{
+  top: 62px !important;
+}
+
 .param_generator_param{
   font-family: $FONT_FAMILY;
   padding: 0;
