--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -41,7 +41,7 @@ $CURRENT_ITEM_FILL: #f4f4f4;
 .create_element_panel{
   background: white;
   position: absolute;
-  width: 200px;
+  width: 100px;
   border: 1px solid #eee;
   border-radius: 5px;
   .input_name{
@@ -66,7 +66,10 @@ $CURRENT_ITEM_FILL: #f4f4f4;
     background: #8d8d8d;
   }
 }
-
+.create_element_panel_for_item{
+  @extend .create_element_panel;
+  width: 200px;
+}
 .business_layout {
   position: relative;
   width: 100%;
