--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -626,3 +626,11 @@ $CURRENT_ITEM_FILL: #f4f4f4;
     border-radius: 50%;
   }
 }
+
+.extended_details_row_description{
+  margin: 0 !important;
+  min-height: 500px;
+}
+.extended_details_col_description{
+  border-right: 1px solid #eee;
+}
