[Modified] OC-324 #comment update and preview connection version 2 #time 8h

--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -16,7 +16,7 @@
 $SVG_HIGHLIGHT_COLOR: #8a9dd7;
 $SUCCESS_COLOR: #359d47;
 $ERROR_COLOR: #c92727;
-$REMOVE_ICON_COLOR: #c92727d9;
+$REMOVE_ICON_COLOR: rgba(201, 39, 39, 0.85);
 $FOCUS_BOX_SHADOW: 0 0 0 0.2rem rgba(38,143,255,.5);
 $INPUT_SELECT_COLOR: #0062cc;
 $BUTTON_COLOR: #007bff;
