[Modified] OC-324 #comment implemented name and current item for business layout #time 4h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -236,6 +236,7 @@ $CURRENT_ITEM_FILL: #f4f4f4;
   height: calc(100% - 22px);
   .title{
     font-size: 32px;
+    margin-left: -2px;
   }
 }
 .extended_details_data{
