--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -12,8 +12,9 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
-$SVG_NOT_ASSIGNABLE_COLOR: #eee;
 $SVG_ASSIGN_COLOR: #79c883;
+$SVG_DISABLED_HIGHLIGHT_COLOR: #499f54;
+$SVG_NOT_ASSIGNABLE_COLOR: #eee;
 $SVG_HIGHLIGHT_COLOR: #8a9dd7;
 $SUCCESS_COLOR: #359d47;
 $ERROR_COLOR: #c92727;
